<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".view.auth.AuthActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/LoginEditTextStyle"
        android:layout_above="@+id/passwordContainer"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_hint"
        android:padding="15dp" />


    <RelativeLayout
        android:id="@+id/passwordContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/etPassword"
            style="@style/LoginEditTextStyle"
            android:layout_centerInParent="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Button
            android:id="@+id/btnShowHidePassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignEnd="@+id/etPassword"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/eye" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etPasswordConfirm"
        style="@style/LoginEditTextStyle"
        android:layout_below="@+id/passwordContainer"
        android:layout_centerHorizontal="true"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAction"
        style="@style/LoginEditTextStyle"
        android:layout_width="200dp"
        android:layout_below="@+id/etPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="328dp"
        android:background="@drawable/capsule"
        android:text="@string/signin" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/etPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/btnSignInRegisterSwitch"
        style="@style/LoginEditTextStyle"
        android:layout_below="@+id/btnAction"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />


</RelativeLayout>