<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TaskItemCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/doneBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/taskDoneActionBackground"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/todone"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/archiveBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/taskArchiveActionBackground"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/toarchive"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/taskActiveActionBackground"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/toactive"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/syncIndicator"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp">

            <Button
                android:id="@+id/btnVocalize"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:background="@drawable/vocalize" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />


        </RelativeLayout>


        <TextView
            android:id="@+id/syncIndicator"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@+id/tvTaskUpdatedAt"
            android:background="@drawable/not_sync" />


        <TextView
            android:id="@+id/tvTaskUpdatedAt"
            style="@style/TaskItemUpdatedAtStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>